# rust_mcu_project

./: Cargo.toml  HOWTORUN.txt  README.md  build.rs  memory.x
.cargo/: config
examples/: blinky.rs  cooperation.rs  external_intervention.rs
src/: doubler.c  doubler.h  main.rs
