[package]
name = "rust_mcu_project"
version = "0.1.1"
edition = "2021"
authors = ["Bence <szabo.bence1103@gmail.com>"]
categories = ["embedded", "no-std"]
repository = "https://github.com/szabobenyo/rust_mcu_project"

# --target thumbv6m-none-eabi
# openocd -f interface/stlink.cfg -f target/stm32l0.cfg

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
