[package]
name = "rust_mcu_project"
version = "0.1.2"
edition = "2021"
authors = ["Bence <szabo.bence1103@gmail.com>"]
categories = ["embedded", "no-std"]
repository = "https://github.com/szabobenyo/rust_mcu_project"

# --target thumbv6m-none-eabi
# openocd -f interface/stlink.cfg -f target/stm32l0.cfg

[profile.release]
# optimize for size ('z' would optimize even more)
opt-level = 's'
# link with link time optimization (lto).
lto = true
# enable debugging in release mode.
debug = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32l0 = "0.15.1"

[dependencies.stm32l0xx-hal]
version = "0.10.0"
features = ["mcu-STM32L010RBTx","stm32l0x1","rt", "disable-linker-script"]

# Alias
mcu-STM32L010RBTx = ["lqfp64", "io-STM32L071", "eeprom-512", "flash-128", "ram-20"]
