[package]
name = "rust_mcu_project"
version = "0.1.3"
edition = "2021"
authors = ["Bence <szabo.bence1103@gmail.com>"]
categories = ["embedded", "no-std"]
repository = "https://github.com/szabobenyo/rust_mcu_project"

# --target thumbv6m-none-eabi
# openocd -f interface/stlink.cfg -f target/stm32l0.cfg

[profile.release]
opt-level = 's' # optimize for size ('z' would optimize even more)
lto = true      # link with link time optimization (lto).
debug = true    # enable debugging in release mode.

[dependencies]
cty = "0.2.2"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
libc = "0.2.147"
panic-halt = "0.2.0"
stm32l0 = "0.15.1"

[dependencies.stm32l0xx-hal]
version = "0.10.0"
features = ["mcu-STM32L010RBTx","stm32l0x1","rt", "disable-linker-script"]
# mcu-STM32L010RBTx = ["lqfp64", "io-STM32L071", "eeprom-512", "flash-128", "ram-20"]

[build-dependencies]
cc = "1.0.79"
